clang/test/BSC/Negative/Ownership/Owned/owned_uninit_cast/owned_uninit_cast.cbs
// RUN: %clang_cc1 -verify %s

void exhaust(void *owned);

void basic() {
    int *owned uninit;
    exhaust((void *owned)uninit); // expected-error {{invalid cast to `void * owned` of uninit value: `uninit`}}
}

struct Foo {
    int x;
};

void custom() {
    struct Foo *owned uninit;
    exhaust((void *owned)uninit); // expected-error {{invalid cast to `void * owned` of uninit value: `uninit`}}
}

int main() {
    basic();
    custom();
    return 0;
}
